@@ -30,6 +30,10 @@
     via Internet when crowdsourcing experiments)
   * adding unzip_file function (to pack and exchange solutions when crowdsourcing experiments)
   * fixing a minor bug when updating entries (do not set data_name to default if already exists)
+  * adding function to create entry if doesn't exist when loading it
+  * improving CK kernel version check
+  * can now check minimal CK kernel version for any module (key "min_kernel_dep" in module cfg)
+  * fixing bug when loading new module (replacing old cfg)
 
 * V1.6.12
   * adding CK_PYTHON env variable in ck script 
